Fix : login pour les admin Fix : les factures sont triès par date sur la page

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "jest --coverage --noStackTrace --silent --json --outputFile=resulttest.json"
+    "test": "jest --coverage --noStackTrace --silent=false --json --outputFile=resulttest.json"
   },
   "jest": {
     "verbose": false,
